--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,11 @@ body{
     background-color: var(--bg);
     color: var(--text)
 }
+
+.fib-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
